fix nav bg color bug on mobile

--- a/styles.css
+++ b/styles.css
@@ -225,7 +225,7 @@ nav {
 
     nav {
         width: 100vw !important;
-        background-color: rgb(51, 58, 64, .8);
+        background-color: rgb(51, 58, 64, .9);
     }
 
     .landing-txt {
